syntax = "proto3";

package NUgc.NSchema.NOnto;

import "kernel/ugc/proto/common/moderation.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Next field: 29
message TOntoObject {
    string OntoId = 1;
    string OType = 2;
    string FeedbackId = 28;

    // rating
    google.protobuf.UInt32Value RatingOverall = 3;
    google.protobuf.Timestamp RatingTime = 10;
    google.protobuf.BoolValue PublicRating = 14;
    google.protobuf.StringValue RatingAppType = 15;
    google.protobuf.StringValue RatingActivityType = 16;

    // review
    google.protobuf.StringValue ReviewOverall = 4;
    google.protobuf.Timestamp ReviewTime = 11;
    google.protobuf.BoolValue ReviewSkipped = 5;
    google.protobuf.StringValue ReviewAppType = 17;
    google.protobuf.StringValue ReviewActivityType = 18;

    google.protobuf.StringValue LastAppType = 19;

    google.protobuf.BoolValue HaveUsed = 6;
    google.protobuf.Timestamp HaveUsedTime = 13;

    google.protobuf.BoolValue NotInterested = 7;
    google.protobuf.BoolValue WouldUse = 8;
    google.protobuf.BoolValue AskMore = 9;
    google.protobuf.BoolValue PublicHidden = 12;

    // moderation and antifraud
    string ModeratedFeedbackId = 20;
    TModerationStatus.EType ModerationStatus = 21;
    repeated TModerationReason.EType ModerationReason = 22;
    google.protobuf.Timestamp ModerationTime = 23;
    google.protobuf.StringValue ModeratedReviewOverall = 24;
    bool Fraud = 25;
    bool Hidden = 26;
    string HiddenReason = 27;
}

// Next field: 16
message TOntoObjectInternal {
    string OntoId = 1;

    TModerationStatus.EType ModerationStatus = 2;
    google.protobuf.Timestamp ModerationTime = 3;
    repeated TModerationReason.EType ModerationReason = 4;
    string ModeratedFeedbackId = 7;
    google.protobuf.StringValue ModeratedReviewOverall = 15;
    bool Fraud = 5;
    google.protobuf.BoolValue Hidden = 6;
    google.protobuf.StringValue RatingAppType = 8;
    google.protobuf.StringValue RatingActivityType = 9;
    google.protobuf.StringValue ReviewAppType = 10;
    google.protobuf.StringValue ReviewActivityType = 11;
    google.protobuf.StringValue LastAppType = 12;

    string FeedbackId = 13;

    string HiddenReason = 14;
}

// for kinopoisk rating migration
message TRatedOntoObject {
    string OntoId = 1;
    google.protobuf.UInt32Value RatingOverall = 2;
}
